<resources>
    <string name="app_name">Project Scandium</string>
    <string name="title_activity_achievements">Achievements</string>
    <string name="config_name_text">Config. Name:</string>
    <string name="upper_score_text">Great Score:</string>
    <string name="lower_score_text">Poor Score:</string>
    <string name="save_config_text">Save</string>
    <string name="delete_config_text">Delete</string>
    <string name="config_colon_text">:</string>
    <string name="config_dash_text">-</string>
    <string name="add_new_configuration_text">Add new configuration</string>
    <string name="game_num">Game: %1$d</string>
    <string name="game_player">Players: %1$d</string>
    <string name="game_score">Combined Score: %1$d</string>
    <string name="game_level">Achievenment Level %1$d: %2$s</string>
    <string name="game_time">Created: %1$s</string>
    <string name="editGame_title">Edit Game</string>
    <string name="config_ach_text">Achievements</string>
    <string name="config_tutorial_text">\n\n\nGetting Started: \n \n1. Press the plus button \n2. Enter the name of the configuration \n3. Choose set the expected scores \n4. View possible levels by clicking\n the achievements button in edit mode\n5. Enjoy the game! :)</string>
    <string name="game_tutorial">\n\n\nGetting Started: \n \n1. Press the plus button \n2. Enter the Number of Players\n and Combined Score \n3. Press the Save Button. \n4. To edit the config. press Edit \n5. Enjoy the game! :)</string>
    <string name="players">Players: ####</string>
    <string name="combined_score">Combined Score: ####</string>
    <string name="game_1">Game: 1</string>
    <string name="level">Level: ###</string>
    <string name="player">Player</string>
    <string name="player_number_combined_score">Player Number\nCombined Score</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="score">Score</string>
    <string name="addPlayer">%1$d</string>
    <string name="addScore">%1$d</string>
    <string name="edit_button_text">EDIT</string>
    <string name="time">Time</string>
    <string name="sep_3_15_20pm">Sep 3 @ 15:20PM</string>
    <string name="achievement_base_score_requirements">Achievement Base Score Requirements</string>
    <string name="current_score_rqd_score">Current Score / Rqd Score</string>
    <string name="achievement_name">Achievement Name</string>
    <string name="completion_status">Completion Status</string>
    <string name="achievements_players">Enter Players:</string>
    <string name="by_ethan_ernest_and_sahaj">By Ethan, Ernest, and Sahaj</string>
    <string name="welcome_to_team_scandium">Team Scandium Presents</string>
    <string name="skip">Skip</string>
    <string name="todo">TODO</string>
    <string name="add_game_text">To add a new game please press a config. from the list above</string>
    <string name="game_title">Cat Stat Combat</string>
    <string name="save_button_text">SAVE</string>
    <string name="fab">FAB</string>
    <string name="NewConfigTitle">New Game Config.</string>
    <string name="EditConfigTitle">Edit Game Config.</string>
    <string name="ConfigurationListTitle">Game Configurations</string>
    <string name="GameNumberText">Game: </string>
</resources>