<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtPlayer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="5dp"
        android:text="@string/players"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="35dp"
        android:text="@string/combined_score"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/GameNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/game_1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtLevel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:text="@string/level"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        android:textSize="16sp" />
</RelativeLayout>