<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameConfig">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/configNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/config_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/configNameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/configNameTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UpperScoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/upper_score_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configNameTxt" />

    <EditText
        android:id="@+id/UpperScoreBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintStart_toEndOf="@+id/UpperScoreTxt"
        app:layout_constraintTop_toBottomOf="@+id/configNameBox" />

    <TextView
        android:id="@+id/LowerScoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/lower_score_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpperScoreTxt" />

    <EditText
        android:id="@+id/LowerScoreBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintStart_toEndOf="@+id/LowerScoreTxt"
        app:layout_constraintTop_toBottomOf="@+id/UpperScoreBox" />

    <Button
        android:id="@+id/saveConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="52dp"
        android:text="@string/save_config_text"
        app:layout_constraintStart_toEndOf="@+id/deleteConfig"
        app:layout_constraintTop_toBottomOf="@+id/LowerScoreBox" />

    <Button
        android:id="@+id/deleteConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="75dp"
        android:text="@string/delete_config_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LowerScoreTxt" />

    <Button
        android:id="@+id/achConfig"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="200dp"
        android:text="@string/config_ach_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveConfig" />

</androidx.constraintlayout.widget.ConstraintLayout>